<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackgroud"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:id="@+id/idRvUpperLayer"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:background="@drawable/login_background_light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/login_backgroud_white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idRvUpperLayer"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:gravity="center_horizontal"
                android:text="@string/signup"
                android:textColor="@color/loginText"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bottom_border"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_mail"
                    tools:ignore="VectorDrawableCompat" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/loginText"
                    android:hint="@string/email_address" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bottom_border"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_lock"
                    tools:ignore="VectorDrawableCompat" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/loginText"
                    android:hint="@string/password" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/bottom_border"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_lock"
                    tools:ignore="VectorDrawableCompat" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/loginText"
                    android:hint="@string/confirm_password" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:textSize="14sp"
                android:textColor="@color/loginMessage"
                android:text="@string/social_media"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:padding="10sp"
                android:gravity="center"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_facebook"
                    tools:ignore="VectorDrawableCompat" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10sp"
                    app:srcCompat="@drawable/ic_twitter"
                    tools:ignore="VectorDrawableCompat" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10sp"
                    app:srcCompat="@drawable/ic_google_plus"
                    tools:ignore="VectorDrawableCompat" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10sp"
                    app:srcCompat="@drawable/ic_linkedin"
                    tools:ignore="VectorDrawableCompat" />



            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/already_account"/>

</LinearLayout>